--- a/mvCommerce/Areas/Collaborator/Views/Client/Index.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Client/Index.cshtml
@@ -1,13 +1,27 @@
 ﻿@model X.PagedList.IPagedList<mvCommerce.Models.Client>
 @{
     ViewData["Title"] = "Index";
+    var search = Context.Request.Query["search"];
 }
-
 @if (TempData["MSG_S"] != null)
 {
     <p class="alert alert-success"><b>@TempData["MSG_S"]</b></p>
 }
 <h1>Clientes</h1>
+<br />
+<br />
+
+<form method="get">
+    <div class="form-row">
+        <div class="col">
+            <input class="form-control mr-sm-2" name="search" type="search" placeholder="Pesquise pelo nome ou email do cliente" aria-label="Search">
+        </div>
+         <button type="submit" class="btn btn-outline-info my-2 my-sm-0">Pesquisar</button>
+    </div>
+        
+</form>
+
+<br />
 <br />
 @if (Model.Count > 0)
 {
@@ -43,7 +57,7 @@
             </tbody>
         </table>
     </div>
-    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
+    @Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page = page, search = search}))
 }
 else
 {
