--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Register";
 }
-    <link rel="stylesheet" href="~/css/ProductRegister.css" />
+<link rel="stylesheet" href="~/css/ProductRegister.css" />
 <h1>Cadastrar</h1>
 
 <form method="post">
@@ -41,7 +41,7 @@
             <div class="form-group">
                 <label asp-for="Amount"></label>
                 <div class="input-group mb-2">
-                    <input type="number" asp-for="Amount" value="0" class="form-control">
+                    <input type="number" asp-for="Amount" class="form-control">
                     <div class="input-group-prepend">
                         <div class="input-group-text">Un</div>
                     </div>
@@ -118,7 +118,8 @@
         @for (int i = 0; i < 6; i++)
         {
             <div class="col-md-2">
-                <img src="~/img/image-default.png" class="img-thumbnail" />
+                <input type="file" name="image[]" class="input-file" />
+                <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
                 <div class="btn btn-danger btn-image-delete">X</div>
             </div>
 
