--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -118,9 +118,10 @@
         @for (int i = 0; i < 6; i++)
         {
             <div class="col-md-2">
-                <input type="file" name="image[]" class="input-file" />
+                <input type="file" class="input-file" />
                 <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
-                <div class="btn btn-danger btn-image-delete">X</div>
+                <div class="btn btn-danger alert-danger btn-image-delete">X</div>
+                <input type="text" name="image" />
             </div>
 
         }
