--- a/mvCommerce/wwwroot/css/ProductRegister.css
+++ b/mvCommerce/wwwroot/css/ProductRegister.css
@@ -6,12 +6,18 @@
     border-top-left-radius:0px;
     border-top-right-radius:0px;
 }
+.btn-hide {
+    display: none;
+}
 .images div {
-    text-align: center;
+   text-align: center;
 }
 .input-file{
     display:none;
 }
 .img-upload{
     cursor:pointer;
+}
+.images input[name=image]{
+    display:none;
 }
