--- a/mvCommerce/Areas/Collaborator/Views/Product/Update.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Update.cshtml
@@ -114,14 +114,35 @@
         </div>
     </div>
     <h2>Imagens do Produto</h2>
+    <p>Clique para adicionar uma imagem</p>
+    @{
+        List<Image> images = new List<Image>();
+        if (Model != null)
+        {
+            images = Model.Images.ToList();
+        }
+    }
     <div class="row images">
         @for (int i = 0; i < 6; i++)
         {
-            <div class="col-md-2">
-                <img src="~/img/image-default.png" class="img-thumbnail" />
-                <div class="btn btn-danger btn-image-delete">X</div>
-            </div>
-
+            @if (images.ElementAtOrDefault(i) != null)
+            {
+                <div class="col-md-2">
+                    <input type="file" class="input-file" />
+                    <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
+                    <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
+                    <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
+                </div>
+            }
+            else
+            {
+                <div class="col-md-2">
+                    <input type="file" class="input-file" />
+                    <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
+                    <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
+                    <input type="text" name="image" />
+                </div>
+            }
         }
     </div>
     <br />
