--- a/mvCommerce/Areas/Collaborator/Views/Category/Update.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Category/Update.cshtml
@@ -26,5 +26,5 @@
         </select>
         <span asp-validation-for="CategoryFatherId" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-info">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+    <button type="submit" class="btn btn-info col-1">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
 </form>
