--- a/mvCommerce/Areas/Collaborator/Views/Collaborator/Update.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Collaborator/Update.cshtml
@@ -19,5 +19,5 @@
         <input asp-for="Email" class="form-control" placeholder="Digite o email">
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-info">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+    <button type="submit" class="btn btn-info col-1">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
 </form>
