--- a/mvCommerce/Areas/Collaborator/Views/Product/Update.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Update.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="~/css/ProductRegister.css" />
 <h1>Editar</h1>
 
-<form method="post">
+<form method="post" class="mb-5">
     <div class="row">
         <div class="form-group col-md-4">
             <label asp-for="Name"></label>
@@ -127,24 +127,32 @@
         {
             @if (images.ElementAtOrDefault(i) != null)
             {
-                <div class="col-md-2">
-                    <input type="file" class="input-file" />
-                    <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
-                    <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
-                    <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
-                </div>
+        <div class="col-md-2">
+            <input type="file" class="input-file" />
+            <div class="container-img-thumbnail">
+               <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
+            </div>
+                <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
+                <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
+            </div>
             }
             else
             {
-                <div class="col-md-2">
-                    <input type="file" class="input-file" />
-                    <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
-                    <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
-                    <input type="text" name="image" />
+            <div class="col-md-2">
+                <input type="file" class="input-file" />
+                <div class="container-img-thumbnail">
+                   <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
                 </div>
+                <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
+                <input type="text" name="image" />
+            </div>
             }
-        }
-    </div>
+         }
+        </div>
     <br />
-    <button type="submit" class="btn btn-info">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+    <div class="mb-3">
+        <div class="mb-3 mt-5">
+            <button type="submit" class="btn btn-info col-1">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+        </div>
+    </div>
 </form>
