--- a/mvCommerce/wwwroot/css/ProductRegister.css
+++ b/mvCommerce/wwwroot/css/ProductRegister.css
@@ -1,23 +1,39 @@
-﻿.images {
+﻿﻿.images {
     width: 100% !important;
 }
-.btn-image-delete{
-    width:100%;
-    border-top-left-radius:0px;
-    border-top-right-radius:0px;
+
+.btn-image-delete {
+    width: 100%;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
 }
+
 .btn-hide {
     display: none;
 }
+
 .images div {
-   text-align: center;
+    text-align: center;
 }
-.input-file{
-    display:none;
+
+.input-file {
+    display: none;
 }
-.img-upload{
-    cursor:pointer;
+.images .img-thumbnail {
+    width:70%;
+    border:none;
 }
-.images input[name=image]{
-    display:none;
+.images .container-img-thumbnail{
+    width:100%;
+    height:100%;
+    max-height:180px;
+    border:1px solid #CCC;
+    border-radius: 6px 6px 0px 0px;
+}
+.img-upload {
+    cursor: pointer;
+}
+
+.images input[name=image] {
+    display: none;
 }
