--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -115,37 +115,45 @@
         </div>
         <h2>Imagens do Produto</h2>
         <p>Clique para adicionar uma imagem</p>
-        @{ 
+        @{
             List<Image> images = new List<Image>();
             if (Model != null)
             {
                 images = Model.Images.ToList();
             }
         }
-    <div class="row images">
-        @for (int i = 0; i < 6; i++)
-        {
-            @if (images.ElementAtOrDefault(i) != null)
+        <div class="row images">
+            @for (int i = 0; i < 6; i++)
             {
-                <div class="col-md-2">
-                    <input type="file" class="input-file" />
-                    <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
-                    <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
-                    <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
-                </div>
+                @if (images.ElementAtOrDefault(i) != null)
+                {
+                    <div class="col-md-2">
+                        <input type="file" class="input-file" />
+                        <div class="container-img-thumbnail">
+                            <img src="@images.ElementAtOrDefault(i).Path" class="img-thumbnail img-upload" />
+                        </div>
+                        <div class="btn btn-danger alert-danger btn-image-delete">Deletar</div>
+                        <input type="text" name="image" value="@images.ElementAtOrDefault(i).Path" />
+                    </div>
+                }
+                else
+                {
+                    <div class="col-md-2">
+                        <input type="file" class="input-file" />
+                        <div class="container-img-thumbnail">
+                            <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
+                        </div>
+                        <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
+                        <input type="text" name="image" />
+                    </div>
+                }
             }
-            else
-            {
-                <div class="col-md-2">
-                    <input type="file" class="input-file" />
-                    <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
-                    <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
-                    <input type="text" name="image" />
-                </div>
-            }
-        }
-    </div>
+        </div>
         <br />
-        <button type="submit" class="btn btn-info">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+        <div class="mb-3">
+            <div class="mb-3 mt-5">
+                <button type="submit" class="btn btn-info col-1">Salvar</button> <a asp-action="Index" class="btn btn-outline-danger">Cancelar</a>
+            </div>
+        </div>
     </form>
 </body>
