--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -3,13 +3,19 @@
     padding-bottom: 20px;
     background-color: #e9e9e9;
 }
-label{
-    color:black;
-    text-shadow:0.5px 0px 0px black;
+
+label {
+    color: black;
+    text-shadow: 0.5px 0px 0px black;
 }
+
 button {
     box-shadow: 3px 3px 3px #a9a9a9;
 }
+#dropdownMenu1{
+    box-shadow:none;
+}
+
 #formMenu input[type= "text"] {
     border: 0;
     color: white;
@@ -24,9 +30,10 @@ button {
     transition: 0.25s;
 }
 
-#formMenu input[type="text"]:focus {
-     width: 350px;
-}
+    #formMenu input[type="text"]:focus {
+        width: 350px;
+    }
+
 a {
     color: #00CED1;
 }
@@ -50,9 +57,62 @@ hr {
 .box {
     box-shadow: 1px 2px 1px 3px #d3d3d3;
 }
+
 #categoriesDropdown {
     background-color: #9980FA;
 }
-aside{
-    margin:auto;
+
+aside {
+    margin: auto;
+}
+
+/**
+* CSS - Menu Multilevel Bootstrap 4
+*/
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu > a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover > a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left > .dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
 }
