--- a/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
+++ b/mvCommerce/Views/Shared/Components/Menu/Default.cshtml
@@ -7,86 +7,36 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-        </button>
-        <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-            <li class="dropdown-item"><a href="#">Some action</a></li>
-            <li class="dropdown-item"><a href="#">Some other action</a></li>
-            <li class="dropdown-divider"></li>
-            <li class="dropdown-submenu">
-                <a class="dropdown-item" tabindex="-1" href="#">Hover me for more options</a>
-                <ul class="dropdown-menu">
-                    <li class="dropdown-item"><a tabindex="-1" href="#">Second level</a></li>
-                    <li class="dropdown-submenu">
-                        <a class="dropdown-item" href="#">Even More..</a>
-                        <ul class="dropdown-menu">
-                            <li class="dropdown-item"><a href="#">3rd level</a></li>
-                            <li class="dropdown-submenu">
-                                <a class="dropdown-item" href="#">another level</a>
-                                <ul class="dropdown-menu">
-                                    <li class="dropdown-item"><a href="#">4th level</a></li>
-                                    <li class="dropdown-item"><a href="#">4th level</a></li>
-                                    <li class="dropdown-item"><a href="#">4th level</a></li>
-                                    <li class="dropdown-submenu">
-                                        <a class="dropdown-item" href="#">another level</a>
-                                        <ul class="dropdown-menu">
-                                            <li class="dropdown-item"><a href="#">5th level</a></li>
-                                            <li class="dropdown-item"><a href="#">5th level</a></li>
-                                            <li class="dropdown-item"><a href="#">5th level</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-item"><a href="#">3rd level</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown-item"><a href="#">Second level</a></li>
-                    <li class="dropdown-item"><a href="#">Second level</a></li>
-                </ul>
-            </li>
-        </ul>
-        @{
-            var AllCategories = Model.ToList();
-        }
-        @if (Model != null && Model.Count > 0)
-        {
-            <div class="dropdown">
-                <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Categorias
-                </button>
-                <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
-                    @{
-                        var mainCategories = AllCategories.Where(c => c.CategoryFatherId == null).ToList();
-                        ViewData["AllCategories"] = AllCategories;
-                    }
-                    @foreach (var category in mainCategories)
-                    {
-                        @await Html.PartialAsync("~/Views/Shared/Components/Menu/_SubMenu.cshtml", new ViewDataDictionary(ViewData) { { "FatherCategory", category } })
-                    }
-                </ul>
-            </div>
-        }
+
+
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item @((ViewContext.RouteData.Values["controller"].ToString() == "Home" && ViewContext.RouteData.Values["action"].ToString() == "Index") ? "active": "")">
                 <a class="nav-link" href="/"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
             </li>
+
+            @{
+                var AllCategories = Model.ToList();
+            }
             @if (Model != null && Model.Count > 0)
             {
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
+                <div class="dropdown">
+                    <a class=" nav-link dropdown-toggle  @((ViewContext.RouteData.Values["controller"].ToString() == "Home" && ViewContext.RouteData.Values["action"].ToString() == "Category") ? "active": "")" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-list-ul"></i> Categorias
                     </a>
-                    <div id="categoriesDropdown" class="dropdown-menu bg-info" aria-labelledby="navbarDropdown">
-                        @foreach (var category in Model)
-                        {
-                            <a class="dropdown-item" href="#"><b>@category.Name</b></a>
+                    <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+                        @{
+                            var mainCategories = AllCategories.Where(c => c.CategoryFatherId == null).ToList();
+                            ViewData["AllCategories"] = AllCategories;
                         }
-                    </div>
-                </li>
+                        @foreach (var category in mainCategories)
+                        {
+                            @await Html.PartialAsync("~/Views/Shared/Components/Menu/_SubMenu.cshtml", new ViewDataDictionary(ViewData) { { "FatherCategory", category } })
+                        }
+                    </ul>
+                </div>
             }
-            <li class="nav-item">
+
+            <li class="nav-item  @((ViewContext.RouteData.Values["controller"].ToString() == "Home" && ViewContext.RouteData.Values["action"].ToString() == "Contact") ? "active": "")">
                 <a class="nav-link" href="/Home/Contact"><i class="far fa-address-book"></i> Contato </a>
             </li>
         </ul>
