--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -30,12 +30,15 @@ button {
     transition: 0.25s;
 }
 
-    #formMenu input[type="text"]:focus {
-        width: 350px;
-    }
+#formMenu input[type="text"]:focus {
+    width: 350px;
+}
 
-a {
+a{
     color: #00CED1;
+}
+#dropdownMenu1{
+    cursor:pointer;
 }
 
 hr {
