--- a/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Product/Register.cshtml
@@ -141,7 +141,7 @@
                     <div class="col-md-2">
                         <input type="file" class="input-file" />
                         <div class="container-img-thumbnail">
-                            <img src="~/img/image-default.png" class="img-thumbnail img-upload" />
+                            <img src="~/img/default-img.png" class="img-thumbnail img-upload" />
                         </div>
                         <div class="btn btn-danger alert-danger btn-image-delete btn-hide">Deletar</div>
                         <input type="text" name="image" />
