--- a/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
+++ b/mvCommerce/Areas/Collaborator/Views/Shared/_Layout.cshtml
@@ -9,35 +9,35 @@
     <meta name="generator" content="Jekyll v4.0.1">
     <title>@ViewBag.Title</title>
 
-        <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
 
 
     <link href="~/resources/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="~/resources/lib/paged-list/paged-list.css" rel="stylesheet" type="text/css"/>
-
+    <link href="~/resources/lib/paged-list/paged-list.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="~/css/CollaboratorArea.css" />
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @@media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
         }
-      }
+
+        @@media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
     </style>
     <!-- Custom styles for this template -->
     <link href="~/resources/lib/dashboard/dashboard.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-dark sticky-top bg-info flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">mvCommerce</a>
-        <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+    <nav class="navbar sticky-top bg-info flex-md-nowrap p-0">
+        <a href="/" class="logo"><h5 class="col-1" id="logo">mvCommerce</h5></a>
+        @*<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">*@
         <ul class="navbar-nav px-3">
             <li class="nav-item text-nowrap">
                 <a class="btn btn-outline-warning my-2 my-sm-0" asp-action="Logout">Sair</a>
@@ -47,7 +47,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse">
                 <div class="sidebar-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
